--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="icon" type="image/png" href="assets/icons/favicon.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <meta name="theme-color" content="#6366f1">
+    <meta name="theme-color" content="#0f172a">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
